# wasm-rt-experiments

./: README.md
closure-alloc/: Cargo.toml  README.md  build.sh  closure_alloc.wasm  closure_alloc.wat  main.js
closure-alloc/src/: lib.rs
js-ffi/: Cargo.toml  README.md  build.sh  js_ffi.legalized.wat  js_ffi.legalized.with_getTempRet0.wasm  js_ffi.legalized.with_getTempRet0.wat  js_ffi.wasm  js_ffi.wat  main.js
js-ffi/src/: lib.rs
sandboxed-execution/: .gitignore  README.md  build.sh  main.js  run.sh
sandboxed-execution/privileged/: Cargo.toml  build.sh  privileged.wasm  privileged.wat
sandboxed-execution/privileged/src/: lib.rs
sandboxed-execution/sandboxed/: Cargo.toml  build.sh  sandboxed.wasm  sandboxed.wat
sandboxed-execution/sandboxed/src/: lib.rs
