[package]
name = "privileged"
version = "0.1.0"
authors = ["Sergey Pepyakin <s.pepyakin@gmail.com>"]

[dependencies]
# Allocator crate
wee_alloc = { git = "https://github.com/fitzgen/wee_alloc.git" }
# memcpy, etc
rlibc = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
